; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijksdl/android/extr_ijksdl_codec_android_mediacodec.c_SDL_AMediaCodec_queueInputBuffer.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijksdl/android/extr_ijksdl_codec_android_mediacodec.c_SDL_AMediaCodec_queueInputBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { {}*, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@AMEDIACODEC__BUFFER_FLAG_FAKE_FRAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SDL_AMediaCodec_queueInputBuffer(%struct.TYPE_7__* %0, i64 %1, i32 %2, i64 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %8, align 8
  store i64 %1, i64* %9, align 8
  store i32 %2, i32* %10, align 4
  store i64 %3, i64* %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = bitcast {}** %15 to i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)**
  %17 = load i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)*, i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)** %16, align 8
  %18 = call i32 @assert(i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)* %17)
  %19 = load i32, i32* %13, align 4
  %20 = load i32, i32* @AMEDIACODEC__BUFFER_FLAG_FAKE_FRAME, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %6
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i64, i64* %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i64, i64* %11, align 8
  %31 = load i32, i32* %12, align 4
  %32 = load i32, i32* %13, align 4
  %33 = call i32 @SDL_AMediaCodec_FakeFifo_queueInputBuffer(i32* %27, i64 %28, i32 %29, i64 %30, i32 %31, i32 %32)
  store i32 %33, i32* %7, align 4
  br label %46

34:                                               ; preds = %6
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = bitcast {}** %36 to i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)**
  %38 = load i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)*, i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)** %37, align 8
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %40 = load i64, i64* %9, align 8
  %41 = load i32, i32* %10, align 4
  %42 = load i64, i64* %11, align 8
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = call i32 %38(%struct.TYPE_7__* %39, i64 %40, i32 %41, i64 %42, i32 %43, i32 %44)
  store i32 %45, i32* %7, align 4
  br label %46

46:                                               ; preds = %34, %23
  %47 = load i32, i32* %7, align 4
  ret i32 %47
}

declare dso_local i32 @assert(i32 (%struct.TYPE_7__*, i64, i32, i64, i32, i32)*) #1

declare dso_local i32 @SDL_AMediaCodec_FakeFifo_queueInputBuffer(i32*, i64, i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
